openshift/kustomize/nginx/base/deploy.yaml
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: default
  annotations:
    description: Defines how to deploy nginx
  labels:
    name: nginx
    part-of: tno
    version: 1.0.0
    component: nginx
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
      part-of: tno
      component: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: nginx
      labels:
        name: nginx
        part-of: tno
        component: nginx
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: nginx
          image: bcgov-c4awhwfpcremdbga.azurecr.io/nginx:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 100Mi
          # livenessProbe:
          #   httpGet:
          #     path: '/nginx-status'
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 120
          #   timeoutSeconds: 60
          #   periodSeconds: 30
          #   successThreshold: 1
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     path: '/nginx-status'
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 120
          #   timeoutSeconds: 60
          #   periodSeconds: 30
          #   successThreshold: 1
          #   failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
