openshift/kustomize/nginx/base/deployConfig.yaml
# How the app will be deployed to the pod.
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: nginx
  namespace: default
  annotations:
    description: Defines how to deploy nginx
  labels:
    name: nginx
    part-of: tno
    version: 1.0.0
    component: nginx
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    name: nginx
    part-of: tno
    component: nginx
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      name: nginx
      labels:
        name: nginx
        part-of: tno
        component: nginx
    spec:
      containers:
        - name: nginx
          image: ""
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 100Mi
          # livenessProbe:
          #   httpGet:
          #     path: '/nginx-status'
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 120
          #   timeoutSeconds: 60
          #   periodSeconds: 30
          #   successThreshold: 1
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     path: '/nginx-status'
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 120
          #   timeoutSeconds: 60
          #   periodSeconds: 30
          #   successThreshold: 1
          #   failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - nginx
        from:
          kind: ImageStreamTag
          namespace: 9b301c-tools
          name: nginx:dev
