openshift/kustomize/nginx/base/route.yaml
# The route for the app.
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  namespace: default
  labels:
    name: nginx
    part-of: tno
    version: 1.0.0
    component: nginx
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: tno-dev-nginx.apps.silver.devops.gov.bc.ca
  path: ""
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: nginx
    weight: 100
